# somestuff

./: .dockerignore  .gitignore  .gitmodules  .mypy.ini  .pre-commit-config.yaml  CLAUDE.md  DOCKERHUB_OVERVIEW.md  Dockerfile  Helper.py  Makefile  README.md  build.sh  config.py  config.yaml  pcbwaydnsstuff.py  pyproject.toml  requirements-dev.txt  requirements.txt
dhcpstuff/: README.md  __init__.py  __main__.py  dhcp_discover.py  diagnose-dhcp.sh
dinogame/: dinogame.py  dinogame_thefarmer.py  dinogame_utils.py  dinogameperstep.py  dinogamepygame.py  energy.py
dnsstuff/: __init__.py  mdns_who.py  pcbwaydnsstuff.py  spf_ipset_updater.py  update_21vianet_ips.py
ecowitt/: Crontanamo.py  ecowittapi.py
ecowittstuff/: Crontanamo.py  ecowittapi.py  somestuff_ecowitt_deployment.yml
flickrdownloaderstuff/: .dockerignore  DOCKERHUB_OVERVIEW.md  Dockerfile  README.md  build_multiarch.sh  entrypoint.sh  flickr-docker.sh  flickr-download-wrapper.py  flickr-list-albums.py  immich-uploader-wrapped.py  kubectlstuff_flickr_downloader.yml  upload-to-immich.sh  upload.sh  url-dbus-opener  url-opener
gcalstuff/: README.md  gcal_event.py
hydromailstuff/: hydromail.py  mailtemplate.html.j2  somestuff_hydromail_cronjob.yml
k3shelperstuff/: README.md  update_local_k3s_keys.py
llmstuff/: config.py  config.yaml  llmbatchhelper.py  llmhelper.py  ollamadeepseekocr.py
mosquitto-2.1/: DOCKERHUB_OVERVIEW.md  Dockerfile  Dockerfile_v.2.1.0rc3  README.md  build-container-multiarch.sh  build.sh  haproxy_test.cfg  k3s_mosquitto_deployment.yml  log-with-ip.patch  mosquitto_test.acl  (+4 more)
(+97 files in other folders)
